--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -867,6 +867,18 @@ select.form-control:focus {
   -webkit-box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.1);
 }
+.user-page .ass1-section {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  box-shadow: 0px 2px 6px -2px rgb(0 0 0);
+}
+
+.user-page .ass1-section__item {
+  width: 46%;
+  margin: 0 2% 4%;
+}
+
 .ass1-section__wrap {
   visibility: hidden;
 }
